--- a/original_sinatra/views/top.erb
+++ b/original_sinatra/views/top.erb
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/css/style.css">
-    <title>学習記録</title>
-</head>
-<body>
-    <h1>ログイン後の画面になりました。</h1>
-</body>
-</html>
+<h1>ログイン後の画面になりました。</h1>
+<a href="/">ログイン画面に戻る</a>
+
+<% User.all.each do |u| %>
+<p><%= u.name %><%= u.password %></p>
+<% end %>
+<% t = 'tsubasa' %>
+<p><%= p User.all.find_by(name: t).password %></p>
