add login action flash

--- a/original_sinatra/views/new.erb
+++ b/original_sinatra/views/new.erb
@@ -1,11 +1,11 @@
 <div class="container">
-    <p class="login-p">ログイン</p>
+    <p class="login-p">新規登録</p>
     <form action="/signup" method="POST">
         <div class="input">
             <input class="input-text" type="text" name="user" placeholder="ID">
         </div>
         <div class="input">
-            <input class="input-text" type="password" name="password" placeholder="password">
+            <input class="input-text" type="password" name="password" placeholder="PassWord">
         </div>
         <div class="input">
             <input id="login" type="submit" value="ログイン" href="/top">
