--- a/original_sinatra/public/css/style.css
+++ b/original_sinatra/public/css/style.css
@@ -79,3 +79,16 @@ input {
     transform: translateY(1px);
     box-shadow: none;
 }
+.new {
+    text-align: center;
+}
+
+.login-flash {
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: rgb(255, 182, 25);
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+}
