--- a/original_sinatra/views/layout.erb
+++ b/original_sinatra/views/layout.erb
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>学習記録</title>
 </head>
 <body>
     <header>学習記録</header>
     <%= yield %>
+    <script type="text/jsx;harmony=true" src="/js/main.js"></script>
 </body>
 </html>
